add readme, fix ci cd config, NonNull annotation (#13)
* add readme, fix ci cd config, NonNull annotation

* fix ci

* fix spring.mongodb.uri